k8s/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: semantic-search
  labels:
    name: semantic-search
