k8s/wrapper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-wrapper-service
  namespace: semantic-search
spec:
  type: NodePort
  selector:
    app: api-wrapper
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
