k8s/wrapper-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-wrapper-ingress
  namespace: semantic-search
spec:
  defaultBackend:
    service:
      name: api-wrapper-service
      port:
        number: 8080
